# TinyWxChat

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
data/: tinywechat.db  tinywechat.db-shm  tinywechat.db-wal
docs/: dev-setup.md  flows.md  hermes-workflow.md  protocol.md  requirements.md  storage.md
protocol/: common.h
scripts/: setup-env.sh  test_client_protocol.py
wx-client/: CMakeLists.txt  main.cpp
wx-client/network/: FrameCodec.cpp  FrameCodec.h  WeChatSocket.cpp  WeChatSocket.h
wx-client/protocol/: MessageBuilder.cpp  MessageBuilder.h
wx-client/src/: main.cpp  mainwindow.cpp  mainwindow.h  networkclient.cpp  networkclient.h  protocol.cpp  protocol.h
wx-client/ui/: AvatarLabel.cpp  AvatarLabel.h  AvatarSelectDialog.cpp  AvatarSelectDialog.h  ChatWidget.cpp  ChatWidget.h  ConversationListWidget.cpp  ConversationListWidget.h  EmojiPicker.cpp  EmojiPicker.h  FriendListWidget.cpp  FriendListWidget.h  GroupChatWidget.cpp  GroupChatWidget.h  GroupCreateDialog.cpp  GroupCreateDialog.h  GroupListWidget.cpp  GroupListWidget.h  LoginWidget.cpp  LoginWidget.h  MainHubWidget.cpp  MainHubWidget.h  MainWindow.cpp  MainWindow.h  RegisterWidget.cpp  RegisterWidget.h
wx-server/: CMakeLists.txt  main.cpp  test_conversations.py  test_edge.py  test_phase1.py  test_phase2.py  test_phase3.py
wx-server/data/: .gitkeep  test.db  test.db-shm  tinywechat.db  tinywechat.db-shm  tinywechat.db-wal
wx-server/src/: database.cpp  database.h  main.cpp  protocol.cpp  protocol.h  server.cpp  server.h  session.cpp  session.h
